# poetry_reader

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  run.sh
config/: drive_config.yaml.example  excel_tracker_example.xlsx  video_defaults.yaml
data/: el_husped.md  poetry.xlsx  poetry_status.xlsx
src/poetry_reader/: __init__.py  background_generator.py  cli.py  generate_videos.py  orchestrator.py  particle_generator.py  ttsgenerator.py  utils.py  video_generator.py
src/poetry_reader/drive/: __init__.py  auth.py  manager.py  tracker.py
src/poetry_reader/youtube/: README.md  __init__.py  auth.py  upload_example.py  uploader.py
