[project]
name = "poetry-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luciano Lorenti", email = "lucianolorenti@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "idiota>=1.1.0",
    "ipython>=9.10.0",
    "kokoro>=0.9.2",
    "langdetect>=1.0.9",
    "moviepy>=2.2.1",
    "numpy==2.3",
    "onnx==1.18",
    "openpyxl>=3.1.5",
    "pandas>=1.5.3",
    "pydrive2>=1.21.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec>=0.10.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[project.scripts]
poetry-reader = "poetry_reader:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]
