[project]
name = "poetry-reader"
version = "0.1.0"
description = "Poetry Reader with Qwen3-TTS"
readme = "README.md"
authors = [
    { name = "Luciano Lorenti", email = "lucianolorenti@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langdetect>=1.0.9",
    "moviepy>=2.2.1",
    "numba>=0.63.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=1.5.3",
    "pip>=26.0.1",
    "pydrive2>=1.21.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "qwen-tts>=0.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[tool.uv]

override-dependencies = ["llvmlite==0.46.0", "numba==0.63.1"]


[project.scripts]
poetry-reader = "poetry_reader:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

